--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
      <div class='content' class='group'>
 
         <h3>A city steeped in history but striding into the modern age</h3>
-          <img src="/images/Catedral.jpg" id='catedral'>
-          <img src="/images/bogota.jpg" id='bogota'>
-          <img src='/images/monse.jpg' id='monse'>
-          <a><img src='/images/bogota2.jpg' id='bog2'></a>
+          <img src="images/Catedral.jpg" id='catedral'>
+          <img src="images/bogota.jpg" id='bogota'>
+          <img src='images/monse.jpg' id='monse'>
+          <a><img src='images/bogota2.jpg' id='bog2'></a>
           <p>Places to check out include:</p>
               <ul >
                   <li><a>The Catedral located in Bolivar Sq.</a></li>
@@ -38,9 +38,9 @@
        <h2>Cartagena</h2>
       <div class="content" class='group'>
        <h3>An historic paradise</h3>
-       <a><img src='/images/cart1.jpg' id='cart1'></a>
-       <a><img src='/images/cart2.jpg' id='cart2'></a>
-       <a><img src='/images/cart3.jpg' id='cart3'></a>
+       <a><img src='images/cart1.jpg' id='cart1'></a>
+       <a><img src='images/cart2.jpg' id='cart2'></a>
+       <a><img src='images/cart3.jpg' id='cart3'></a>
        <p id='bask'>Bask on the Caribbean Coast, either spending time visiting the old colonial city or lounging on the sandy beaches.</p>
        </div>
      </div>
